# runlet

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  REVIEW_LOG.md  STDLIB.md  package.json
editors/tree-sitter-runlet/: .gitattributes  README.md  grammar.js  tree-sitter.json
editors/tree-sitter-runlet/src/: grammar.json  node-types.json
editors/vim/: README.md
editors/vim/ftdetect/: runlet.vim
editors/vim/ftplugin/: runlet.vim
editors/vim/syntax/: runlet.vim
editors/vscode/: README.md  language-configuration.json  package.json
editors/zed/: README.md  extension.toml
examples/: 01_values.rnlt  02_operators.rnlt  03_loops.rnlt  04_conditionals.rnlt  05_boundaries.rnlt  06_folds_and_keys.rnlt
examples/live/: pipeline.rnlt
src/: analyzer.rs  diagnostic.rs  grammar.json  graph.rs  heal.rs  lexer.rs  lib.rs  main.rs  node-types.json  parser.c  parser.rs  prelude.rs  runtime.rs  schema.rs  syntax.rs  value.rs
test/corpus/: language.txt
tests/: backoff.rs  cli.rs  core_examples.rs  e2e_programs.rs  editor_support.rs  heal.rs  semantic_model.rs
tests/programs/: p01_block_inside_parenthesized_else.rnlt  p02_find_first_fold_null_seed.rnlt  p03_keyed_accumulation.rnlt  p04_regex_normalization_with_writes.rnlt  p05_skip_fold_boundary_fail.rnlt  p06_multiline_literals_in_call_args.rnlt  p07_sort_slice_range_pagination.rnlt  p08_json_time_pipeline.rnlt  p09_optional_property_null_omit.rnlt  p10_input_driven_merge_chains.rnlt  p11_mixed_sort_kind_error.rnlt  p12_invalid_literal_regex_rejected.rnlt  p13_block_if_branching.rnlt
(+5 files in other folders)
