[package]
name = "runlet"
version = "0.1.0"
edition = "2021"
description = "A semantic executable model for the Runlet orchestration language"
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-ident = "1"

[dev-dependencies]
pretty_assertions = "1"

